--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+# Electron
+/release
+/dist
+*.exe
+*.dmg
+*.app
+*.deb
+*.AppImage
+*.zip
+*.tar.gz
