--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "angular",
-  "version": "0.0.0",
+  "name": "electron-angular",
+  "version": "1.0.0",
+  "main": "electron-main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "electron": "electron .",
+    "electron:dev": "NODE_ENV=development electron .",
+    "electron:build": "ng build --configuration production --base-href ./ && electron-builder",
+    "electron:build-mac": "ng build --configuration production --base-href ./ && electron-builder --mac",
+    "electron:build-win": "ng build --configuration production --base-href ./ && electron-builder --win",
+    "electron:build-linux": "ng build --configuration production --base-href ./ && electron-builder --linux"
   },
   "prettier": {
     "printWidth": 100,
@@ -21,23 +28,76 @@
     ]
   },
   "private": true,
-  "packageManager": "npm@11.6.2",
+  "packageManager": "npm@11.10.0",
   "dependencies": {
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/router": "^21.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "@angular/cdk": "~21.1.4",
+    "@angular/common": "^21.1.4",
+    "@angular/compiler": "^21.1.4",
+    "@angular/core": "^21.1.4",
+    "@angular/forms": "^21.1.4",
+    "@angular/material": "~21.1.4",
+    "@angular/platform-browser": "^21.1.4",
+    "@angular/router": "^21.1.4",
+    "dayjs": "^1.11.19",
+    "rxjs": "~7.8.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.3",
-    "@angular/cli": "^21.0.3",
-    "@angular/compiler-cli": "^21.0.0",
-    "jsdom": "^27.1.0",
-    "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "@angular/build": "^21.1.4",
+    "@angular/cli": "^21.1.4",
+    "@angular/compiler-cli": "^21.1.4",
+    "@angular/material": "^21.1.4",
+    "@tailwindcss/postcss": "^4.1.18",
+    "electron": "^40.4.1",
+    "electron-builder": "^26.7.0",
+    "jsdom": "^28.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.18"
+  },
+  "build": {
+    "appId": "com.electron.angular",
+    "productName": "Electron Angular App",
+    "directories": {
+      "output": "release",
+      "buildResources": "public/assets"
+    },
+    "files": [
+      "dist/**/*",
+      "electron-main.js",
+      "preload.js",
+      "package.json",
+      "public/assets/images/**/*"
+    ],
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "category": "public.app-category.developer-tools",
+      "icon": "public/assets/images/logo1.png"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ],
+      "icon": "public/assets/images/logo1.png"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "category": "Development",
+      "icon": "public/assets/images/logo1.png"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
   }
 }
