--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "private": true,
+  "license": "MIT",
   "packageManager": "npm@11.10.0",
   "dependencies": {
     "@angular/cdk": "~21.1.4",
