--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "electron-main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "ng serve --port 4242 -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
